--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,14 @@
             <version>4.22.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+        <dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>5.1.1</version>
+        </dependency>
+
+
     </dependencies>
 
 
